[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/bubble_2.png" type="Texture" id=1]
[ext_resource path="res://sprites/bubble_3.png" type="Texture" id=2]
[ext_resource path="res://sprites/bubble_1.png" type="Texture" id=3]
[ext_resource path="res://Bubble.gd" type="Script" id=4]

[node name="Bubble" type="Node2D"]
script = ExtResource( 4 )

[node name="Bubble_1" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Bubble_2" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Bubble_3" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
